scripts works on win (could be better) fixing WIN/UNIX compatibility